# currency_exchange_FastAPI

./: .dockerignore  .env_example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml  test_main.http
alembic/: env.py
alembic/versions/: 0e36f9f9807e_тест_настроек_decimal.py  19beb4e78304_определение_отношения.py  22e8c9234f1d_определение_отношения_3.py  45dcfbb8e58d_определение_отношения_2.py  4cf744cc5a4f_fix_name_currencies.py  6bfc98c4910a_.py  917bb5bb3e5a_определение_отношения_4.py  964377800b21_.py  99312dcad293_изменение_decimal.py
src/: config.py  database.py  insert_data_db.py  logging_config.py  main.py  middleware.py  models.py
src/dao/: DAO_currency.py  DAO_exchange_rates.py
src/exception/: exceptions.py
src/routes/: currencies.py  exchange.py  exchange_rates.py
src/schemas/: currency_schema.py  exchange_rates_schema.py  exchange_schema.py
src/services/: exchange_service.py
tests/: conftest.py  test_currencies.py  test_exchange.py  test_exchange_rates.py
