[tool.poetry]
name = "currency-exchange-fastapi"
version = "0.1.0"
description = ""
authors = ["Pavel Bramanis <bramanis2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
